# Kairo

./: .gitignore  AGENTS.md  README.es.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
logo/: README.md
packaging/kde/kwin/kairo-keep-above/: metadata.json
packaging/kde/kwin/kairo-keep-above/contents/code/: main.js
scripts/: install-kairo-kwin-script.sh
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  timer_commands.rs  window_commands.rs
src-tauri/src/domain/: mod.rs  models.rs  timer_engine.rs  timer_snapshot.rs
src-tauri/src/infrastructure/: clock.rs  db.rs  kde_integration.rs  mod.rs  notifications.rs  repositories.rs  tray.rs  windows.rs
src/app/: App.tsx  window-router.tsx
src/components/: IconButton.tsx  TimerControls.tsx  TimerDisplay.tsx
src/features/focus/: floatingTimerPreference.ts  focus.types.ts  focusDurationPreference.ts  formatDuration.ts  themePreference.ts  timerApi.ts  timerPlan.ts  useTimerSnapshot.ts
src/services/: audioService.ts  tauriEvents.ts
src/styles/: global.css  tokens.css
src/windows/MainWindow/: MainWindow.css  MainWindow.tsx
src/windows/MiniTimerWindow/: MiniTimerWindow.css  MiniTimerWindow.tsx
src/windows/TimerWindow/: TimerWindow.css  TimerWindow.tsx
