[package]
name = "kairo"
version = "0.1.2"
description = "Kairo desktop focus timer"
authors = ["Kairo Maintainers"]
edition = "2021"

[lib]
name = "focus_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
